# Proofsys

./: .gitignore  CMakeLists.txt  README.md  main.cpp
benchmarks/: 001.cnf  002.cnf  003.cnf  004.cnf  005.cnf  006.cnf  007.cnf  008.cnf  009.cnf  010.cnf  011.cnf  012.cnf  013.cnf  017.cnf  018.cnf  019.cnf  020.cnf  021.cnf  022.cnf  023.cnf  024.cnf  025.cnf  026.cnf
